--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 github_username:  jiangxw06
+zhihu_username: jiang-xiao-wei
 
 # Build settings
 markdown: kramdown
